// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton component Component with all props matches snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#757575",
        "borderRadius": 10,
        "borderWidth": 1,
        "height": 20,
        "justifyContent": "center",
        "marginRight": 40,
        "opacity": 1,
        "width": 20,
      }
    }
  >
    <View />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
        },
      ]
    }
  >
    <Text
      color="black"
      size="md"
      style={
        Array [
          Object {
            "color": "#000",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "textDecorationColor": "black",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
          },
        ]
      }
    >
      abc
    </Text>
  </Text>
</View>
`;

exports[`RadioButton component Component with only necessary props matches snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#757575",
        "borderRadius": 10,
        "borderWidth": 1,
        "height": 20,
        "justifyContent": "center",
        "marginRight": 40,
        "opacity": 1,
        "width": 20,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#A22841",
          "borderColor": "#A22841",
          "borderRadius": 10,
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
        },
      ]
    }
  >
    Red wine
  </Text>
</View>
`;
